--- a/pwnagotchi/defaults.toml
+++ b/pwnagotchi/defaults.toml
@@ -28,6 +28,9 @@ main.plugins.auto-update.enabled = true
 main.plugins.auto-update.install = true
 main.plugins.auto-update.interval = 1
 
+main.plugins.ups_lite.enabled = false
+main.plugins.ups_lite.shutdown = 1
+
 main.plugins.net-pos.enabled = false
 main.plugins.net-pos.api_key = "test"
 
